# xwsclient

./: .gitignore  CMakeLists.txt  README.md  build.sh  vcpkg.json
executables/: CMakeLists.txt  main.cpp
xwsclient/: CMakeLists.txt
xwsclient/common/: ws_common.cpp  ws_common.hpp
xwsclient/hyperliquid/: hlclient.cpp  hlclient.hpp
